Fixing working group tile alignment in Firefox

--- a/wp-content/themes/omf/assets/src/styles/modules/cards.scss
+++ b/wp-content/themes/omf/assets/src/styles/modules/cards.scss
@@ -40,12 +40,16 @@
 
 .Card-header {
     display: table;
-    width: 100%;
     min-height: 320px;
     background: {
         repeat: no-repeat;
         position: center;
         size: cover;
+    }
+
+    .flexbox & {
+        display: flex;
+        align-items: flex-end;
     }
 }
 
